--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "type": "module",
   "scripts": {
-    "dev": "tailwind -i src/public/index.css -o src/public/style.css -w | nodemon",
-    "build": "tsc | cp -r src/views dist | cp -r src/public dist | tailwind -i dist/public/index.css -o dist/public/style.css && rm dist/public/index.css",
-    "start": "node dist/index.js"
+    "dev": "tailwind -i public/index.css -o public/style.css -w | nodemon -x tsx src/index.ts",
+    "build": "vite build && tailwind -i public/index.css -o public/style.css",
+    "start": "NODE_ENV=production tsx src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +16,23 @@
     "@types/express": "^4.17.21",
     "@types/express-ejs-layouts": "^2.5.4",
     "@types/node": "^20.11.4",
+    "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
     "nodemon": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "@types/http-errors": "^2.0.4",
     "express": "^4.18.2",
     "htmx.org": "^1.9.10",
-    "liquidjs": "^10.10.0"
+    "liquidjs": "^10.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tsx": "^4.7.0",
+    "vite-express": "^0.14.1"
   }
 }
